app/src/main/assets/components/explorer/explorer.css
explorer-view {
	--header-height: 40vh;
	--actions-height: 80px;
	--animation-range: 40vh;

	display: flex;
	flex-direction: column;
	height: 100vh;

	timeline-scope: --grid-scroll;

	header {
		flex-shrink: 0;
		position: relative;
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		width: 100%;
		height: var(--header-height);
		padding-inline: var(--safe-area);

		animation: shrink-header linear both;
		animation-timeline: --grid-scroll;
		animation-range: 0 var(--animation-range);

		h1, sub {
			color: var(--text);
			font: 500 36px / 1 system-ui;
			text-align: center;
			overflow: hidden;
			line-clamp: 2;
			-webkit-line-clamp: 2;
			-webkit-box-orient: vertical;
			word-break: break-word;

			animation: toggle-title linear reverse both;
			animation-timeline: --grid-scroll;
			animation-range: 0 164px;
		}
		sub {
			display: block;
			margin-top: 8px;
			color: var(--text-light);
			font: 400 13px / 1 system-ui;
		}

		h2 {
			margin: 0 auto 0 12px;
			color: var(--text);
			font: 400 20px / 1 system-ui;

			animation: toggle-title linear both;
			animation-timeline: --grid-scroll;
			animation-range: 0 164px;
		}

		actions {
			position: absolute;
			inset: auto var(--safe-area) var(--safe-area) auto;
			display: flex;
			align-items: center;
			gap: 8px;
		}

		button[icon] { font-size: 22px; }

		.more-button { anchor-name: --more-button; }
		.more-popover {
			position-anchor: --more-button;
			position: absolute;
			position-area: center;
			margin-left: -56px;
			margin-top: -4px;
			padding: 4px;
			border-radius: 28px;
			border: none;
			background: var(--background-light);
			opacity: 0;
			translate: 20px 0;
			transition: .3s allow-discrete;

			&:popover-open {
				display: flex;
				opacity: 1;
				translate: 0;

				@starting-style {
					opacity: 0;
					translate: 20px 0;
				}
			}
		}
	}

	grid {
		flex-grow: 1;
		display: grid;
		place-content: start;
		grid-template-columns: 1fr 1fr 1fr;
		gap: 4px;
		margin: 0 var(--safe-area);
		border-radius: 28px;
		overflow-y: auto;
		scroll-timeline: --grid-scroll y;
		scrollbar-width: none;

		&:empty {
			display: flex;
			flex-direction: column;
			align-items: center;
			justify-content: center;
			gap: 24px;
			background: var(--background-light);

			&::before, &::after {
				content: '(^_^)'; /* (≥o≤) OR \(o_o)/ OR (o^^)o OR (^-^*) OR (='X'=) OR (˚Δ˚)b */
				color: var(--text-light);
				font: 400 64px / 1 system-ui;
				opacity: .5;
			}

			&::after {
				content: 'Folder is empty';
				font-size: 14px;
			}
		}

		button {
			display: flex;
			flex-direction: column;
			gap: 8px;
			height: 180px;
			padding: 64px 8px 8px;
			border-radius: 4px;
			background: var(--background-light);

			i { font-size: 28px; }
			span {
				display: -webkit-box;
				font-size: 12px;
				overflow: hidden;
				line-clamp: 2;
				-webkit-line-clamp: 2;
				-webkit-box-orient: vertical;
				word-break: break-word;
			}
		}
		img {
			width: 100%;
			height: 180px;
			object-fit: cover;
			border-radius: 4px;
			background: var(--background-light)
				url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><rect x="3.5" y="3.5" width="17" height="17" fill="none" stroke="%23555"/><rect x="13" y="7.5" width="3" height="3" rx="1.5" fill="none" stroke="%23555" stroke-miterlimit="10"/><polyline points="17.5 20.5 7.5 10.5 3.5 14.5" fill="none" stroke="%23555"/></svg>')
				50% / 32px no-repeat;

			transition: .3s;

			&:active { scale: .9; }
		}

		> *:nth-child(1) { border-radius: 28px 4px 4px 4px; }
		> *:nth-child(3) { border-radius: 4px 28px 4px 4px; }
	}

	scrollbar-track {
		position: fixed;
		inset: var(--header-height) 0 calc(2 * var(--safe-area) + 56px) auto;
		width: 24px;

		scale: 0 1;
		transform-origin: right;
		transition: scale .3s;
		&.show { scale: 1; }

		scrollbar-thumb {
			position: absolute;
			height: 80px;
			width: 100%;

			&::before {
				content: '';
				display: block;
				height: 100%;
				width: 4px;
				margin-inline-start: auto;
				border-radius: 4px 0 0 4px;
				background: var(--background-active);
				transition: background .2s;
			}

			&:active { background: transparent; }
			&.dragging::before { background: var(--text-light); }
		}
	}

	toolbar {
		position: relative;
		flex-shrink: 0;
		display: flex;
		align-items: center;
		margin: var(--safe-area);
		padding: 4px;
		border-radius: 28px;
		overflow: hidden;
		background: var(--background-light);

		/* view-transition-name: explorer-toolbar; */

		#back-button {
			/* a smaller size without compromizing the click area */
			background: radial-gradient(var(--background-active) 20px, var(--background-light) 20px);
		}

		#crumbs {
			display: flex;
			padding-right: 12px;
			overflow-x: auto;
			scrollbar-width: none;
		}

		button { flex-shrink: 0; }
		button:not([icon]) {
			display: flex;
			align-items: center;
			height: 48px;
			padding: 0 12px 1px;
			border-radius: 50px;
			color: var(--text-light);
			font-size: 14px;
			overflow: hidden;
			white-space: nowrap;
			transition: .3s;

			&:last-child {
				color: var(--text);
				font-weight: 600;
				pointer-events: none;
			}

			&:empty { display: none; }
		}

		i {
			display: flex !important;
			align-items: center;
			color: var(--text-light);
			font-size: 20px;
		}

		#search {
			display: none;
			position: absolute;
			inset: 4px 4px 4px 50px;
			padding-left: 16px;
			border: none;
			outline: none;
			color: var(--text);
			background: var(--background-light);
			font-size: 14px;

			&.show { display: block; }
		}
	}
}

/* HEADER SCROLL ANIMATIONS */
@keyframes shrink-header {
	100% { height: var(--actions-height); }
}
@keyframes expand-grid {
	100% { margin-top: var(--actions-height); }
}

@keyframes toggle-title {
	0% { opacity: 0; }
	100% { opacity: 1; }
}

/* VIEW TRANSITIONS */
html:active-view-transition-type(cross-fade) {
	&::view-transition-old(root) { animation: .2s fade-out; }
	&::view-transition-new(root) { animation: .7s fade-in; }
}
html:active-view-transition-type(forward) {
	&::view-transition-old(root) { animation: .2s forward-out; }
	&::view-transition-new(root) { animation: .3s forward-in; }
}
html:active-view-transition-type(back) {
	&::view-transition-old(root) { animation: .2s forward-in reverse both; }
	&::view-transition-new(root) { animation: .3s forward-out reverse both; }
}

@keyframes forward-in {
	0% {
		translate: 100vw 0;
		opacity: 0;
	}
	100% {
		translate: 0;
		opacity: 1;
	}
}
@keyframes forward-out {
	0% {
		translate: 0;
		opacity: 1;
	}
	100% {
		translate: -30vw;
		opacity: 0;
	}
}
@keyframes fade-in {
	from { opacity: 0; }
	to { opacity: 1; }
}
@keyframes fade-out {
	from { opacity: 1; }
	to { opacity: 0; }
}

